--- a/main/main.css
+++ b/main/main.css
@@ -408,5 +408,12 @@ h1 {
 		border: none;
 		font-size: 20px;
 	}
+	#prodetails {
+		display: flex;
+		flex-direction: column;
+	}
+	.proimages {
+		margin: 40px 0;
+	}
 
 }
