--- a/placeList/placeList.css
+++ b/placeList/placeList.css
@@ -171,7 +171,7 @@ h3 {
   flex-direction: row;
   justify-content: space-around;
   margin-top: 150px;
-  background-color: green;
+  background-color: gray;
   padding: 85px;
 }
 
